2006-07-12  Alexander Malysh <amalysh at kannel.org>
  * doc/userguide/userguide.xml, gw/smsbox.c, gwlib/cfg.def: applied patch
    that adds two new config options to smsbox group: bearerbox-port and
    bearerbox-port-ssl. This patch should help external modules at least
    sqlbox now.

2006-07-07  Stipe Tolj  <stolj at kannel.org>
  * gw/smsc/smpp_pdu.c: added a new string for smpp_error_to_string() 
    indicating that we have a value in the vendor-specific range. NLC.
  * gw/smsc/smsc_http.c: changed email reference. NLC.

2006-07-05  Stipe Tolj  <stolj at kannel.org>
  * gwlib/cfg.[ch]: adding support for hooking config group definition files
    as our own gwlib/cfg.def from external add-on modules to the core via
    cfg_add_hooks(), taking two function arguments within the local scope of
    the external module, representing the is_allowed_in_group() and 
    is_single_group() from the core. In the local scope the external .def
    file is included as we do in the core. The purpose of this cfg_add_hooks()
    function is to allow add-on modules to use seamlessly the core's cfg.c
    code for semantical config checks at startup.
    
2006-07-05  Stipe Tolj  <stolj at kannel.org>
  * gwlib/http.c: fixing bug #326, which causes panic in check_pool_conn() 
    when using HTTP/1.1 keep-alive connections, hence the dict_get() lookup
    returned a NULL and we pass this list untested to gwlib_delete_equal()
    which causes the panic. Thanks a lot to Vincent and Martin on solving.

2006-06-13  Stipe Tolj  <stolj at kannel.org>
  * gw/smsc/smsc_smpp.c: fixing bug report #334, actually this is a
    feature to auto-detect if we have hex values for the message id
    in submit_sm_resp vs. DLR messages via a if OR statement.
    Thanks to Martin Conte <reflejo@gmail.com> for this patch.
    [Msg-Id: <92cf04420606040932k3ae8b166of0d111f9e825f4ca@mail.gmail.com>]
    
2006-06-12  Stipe Tolj  <stolj at kannel.org>