@@ -30,4 +30,4 @@ D/wmlscript////
 /mkinstalldirs/1.1/Fri Nov 11 16:58:32 2005//
 /configure/1.162/Tue Jun  6 13:54:14 2006//
 /configure.in/1.168/Tue Jun  6 13:54:06 2006//
-/ChangeLog/1.2796/Wed Jul 12 18:44:37 2006//
+/ChangeLog/1.2798/Wed Jul 26 12:14:20 2006//
