@@ -44,14 +44,12 @@ D/smsc////
 /settings.dtd/1.1/Fri Nov 11 16:58:35 2005//
 /shared.c/1.39/Fri Mar 17 11:02:11 2006//
 /shared.h/1.19/Fri Mar 17 11:04:22 2006//
-/sms.c/1.21/Fri Nov 11 17:30:01 2005//
 /sms.h/1.15/Fri Nov 11 17:30:01 2005//
 /smscconn.c/1.55/Fri Apr  7 16:35:22 2006//
 /smscconn.h/1.17/Fri Nov 11 16:58:35 2005//
 /smscconn_p.h/1.49/Fri Apr  7 12:35:40 2006//
 /smskannel-ssl.conf/1.3/Fri Nov 11 16:58:36 2005//
 /smskannel.conf/1.18/Thu Apr  6 17:18:40 2006//
-/urltrans.c/1.101/Fri Apr 28 15:20:02 2006//
 /urltrans.h/1.32/Fri Nov 11 16:58:35 2005//
 /wap-appl.c/1.119/Tue Feb 28 18:04:55 2006//
 /wap-appl.h/1.8/Fri Nov 11 16:58:35 2005//
@@ -84,4 +82,6 @@ D/smsc////
 /xml_definitions.h/1.5/Fri Nov 11 16:58:35 2005//
 /xml_shared.c/1.13/Tue Jan 10 11:53:56 2006//
 /xml_shared.h/1.9/Tue Jan 10 11:53:56 2006//
-/smsbox.c/1.267/Fri Jul  7 19:24:46 2006//
+/sms.c/1.21/Mon Aug 21 11:20:53 2006//
+/smsbox.c/1.267/Mon Aug 21 11:20:53 2006//
+/urltrans.c/1.101/Mon Aug 21 11:20:53 2006//
