@@ -8,23 +8,23 @@
 /smpp_pdu_opt.def/1.5/Fri Nov 11 16:58:36 2005//
 /smsc.c/1.8/Fri Nov 11 16:58:36 2005//
 /smsc.h/1.4/Fri Nov 11 16:58:36 2005//
-/smsc_at.c/1.31/Tue May 23 13:23:31 2006//
 /smsc_at.h/1.11/Fri Apr 28 15:20:02 2006//
 /smsc_cgw.c/1.14/Fri Nov 11 16:58:36 2005//
 /smsc_cimd.c/1.4/Fri Nov 11 16:58:36 2005//
-/smsc_cimd2.c/1.28/Fri Nov 11 17:30:01 2005//
-/smsc_emi.c/1.15/Fri Apr  7 12:35:40 2006//
 /smsc_emi_x25.c/1.6/Fri Nov 11 16:58:36 2005//
 /smsc_fake.c/1.17/Fri Apr  7 12:35:40 2006//
-/smsc_ois.c/1.7/Fri Nov 11 17:30:01 2005//
-/smsc_oisd.c/1.11/Fri Nov 11 17:30:01 2005//
 /smsc_p.h/1.9/Fri Nov 11 16:58:36 2005//
 /smsc_sema.c/1.7/Fri Nov 11 16:58:36 2005//
 /smsc_sema.h/1.5/Fri Nov 11 16:58:36 2005//
 /smsc_smasi.c/1.23/Fri Apr  7 12:35:40 2006//
-/smsc_soap.c/1.16/Fri Nov 11 17:30:01 2005//
 /smsc_wrapper.c/1.8/Fri Nov 11 16:58:36 2005//
-/smsc_smpp.c/1.95/Wed Jul  5 23:15:36 2006//
 /smpp_pdu.c/1.25/Mon Jul 10 14:15:33 2006//
 /smsc_http.c/1.50/Mon Jul 10 14:15:33 2006//
+/smsc_at.c/1.31/Mon Aug 21 11:20:53 2006//
+/smsc_cimd2.c/1.28/Mon Aug 21 11:20:53 2006//
+/smsc_emi.c/1.15/Mon Aug 21 11:20:53 2006//
+/smsc_ois.c/1.7/Mon Aug 21 11:20:53 2006//
+/smsc_oisd.c/1.11/Mon Aug 21 11:20:53 2006//
+/smsc_smpp.c/1.95/Mon Aug 21 11:20:53 2006//
+/smsc_soap.c/1.16/Mon Aug 21 11:20:53 2006//
 D
